@@ -34,7 +34,7 @@
 
 extern void NsDbInitPools(void);
 extern void NsDbInitServer(char *server);
-extern Ns_TclTraceProc NsDbAddCmds;
+extern Ns_TclTraceProc NsDbAddCmds, NsDbReleaseHandles;
 extern void 		NsDbClose(Ns_DbHandle *);
 extern void 		NsDbDisconnect(Ns_DbHandle *);
 extern struct DbDriver *NsDbGetDriver(Ns_DbHandle *);
